# ibp-matrix-alerts-bot

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  abot-update.sh
.github/workflows/: create_release.yml
docker/: docker-compose.yaml
src/: abot.rs  cache.rs  config.rs  errors.rs  main.rs  matrix.rs  report.rs
src/api/: guards.rs  helpers.rs  mod.rs  routes.rs
src/api/handlers/: alerts.rs  index.rs  mod.rs
src/monitor/: client.rs  mod.rs
