[package]
name = "abot"
version = "0.1.4"
authors = ["Paulo <paulo@turboflakes.io>"]
description = "Subscribe to Alerts published by ibp-monitor and delivery over matrix" 
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
envy = "0.4"
log = "0.4"
env_logger = "0.9.0"
clap = "2.33"
lazy_static = "1.4"
derive_more = "0.99"
async-recursion = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "^1.0.24"
chrono = "0.4"
regex = "1.4.6"
reqwest = { version = "0.11", features = ["json", "blocking", "multipart"] }
url = "2.2.2"
base64 = "0.13.0"
async-std = { version = "1.11.0", features = ["attributes", "tokio1"] }
redis = { version = "0.22.0", features = ["async-std-comp"] }
mobc = { version = "0.8", default-features = false, features = ["async-std"] }
mobc-redis = { version = "0.8", default-features = false, features = ["async-std-comp"] }
actix = "0.13"
actix-web = "4"
actix-cors = "0.6"
